# django_demo_2023

./: .gitignore  Makefile  build.sh  pyproject.toml  render.yaml  requirements.txt  start.sh
django_demo_site/: settings.py
first/templates/: index.html
