[tool.poetry]
name = "django-demo-site"
version = "0.1.0"
description = ""
authors = ["Dmitry Paramonov <gamiysikdima@gmail.com>"]
readme = "README.md"
packages = [{include = "django_demo_site"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
